# minecraft-clone

./: Cargo.toml  README.md  index.html  worker.js
src/: camera.rs  chunk.rs  generator.rs  lib.rs  main.rs  mesh.rs  noise.rs  position.rs  reload.rs  renderer.rs  shader.wgsl  simulation.rs  statistics.rs  terrain.rs  texture.rs  timer.rs  wasm.rs  worker.rs  world.rs
src/generator/: noise.rs  terrain.rs
src/renderer/: camera.rs  gui.rs  input.rs  mesh.rs  reload.rs  shader.wgsl  texture.rs
src/simulation/: chunk.rs  position.rs  world.rs
src/worker/: thread_worker.rs  web_worker.rs
