[package]
name = "minecraft-clone"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
reload = ["wgpu/naga"]

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
pollster = "0.3.0"
winit = { version = "0.29.3", features = ["rwh_05"] }
wgpu = { version = "0.18.0" }
bytemuck = { version = "1.14.0", features = ["derive"] }
glam = "0.24.2"
rand = "0.8.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.18.0", features = ["webgl"]}
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
web-sys = { version = "0.3", features = ["console", "Element"]}