[package]
name = "minecraft-clone"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
reload = ["wgpu/naga"]

[dependencies]
log = "0.4.22"
winit = { version = "0.29.15", features = ["rwh_05"] }
bytemuck = { version = "1.16.1", features = ["derive"] }
glam = "0.28.0"
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "0.20.1" }
env_logger = "0.11.3"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.20.1", features = ["webgl", "webgpu"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["console", "Element", "Performance"] }
getrandom = { version = "0.2", features = ["js"] }