[package]
name = "minecraft-clone"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
#reload = ["wgpu/naga"]
reload = []

[dependencies]
log = "0.4.22"
winit = { version = "0.30.12" }
bytemuck = { version = "1.18.0", features = ["derive"] }
glam = "0.29.0"
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
wgpu = { version = "26.0.1" }
env_logger = "0.11.5"
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "26.0.1", features = ["webgl", "webgpu"] }
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = { version = "0.3.70", features = ["console", "Element", "Performance"] }
getrandom = { version = "0.2", features = ["js"] }